# MovieApp

./: CMakeLists.txt  Dockerfile.c  Dockerfile.recserver  Dockerfile.web-ser  README.md  docker-compose.yml  package-lock.json  package.json  runClient.sh  runServer.sh
src/: client.py
src/apiServer/: app.js
src/apiServer/auth/: auth.js
src/apiServer/controllers/: categories.js  movies.js  users.js
src/apiServer/models/: categories.js  movies.js  users.js
src/apiServer/routes/: categories.js  movies.js  users.js
src/recServer/: App.cpp  App.h  MovieManager.cpp  MovieManager.h  main.cpp  user.cpp  user.h
src/recServer/commands/: DELETECommand.cpp  DELETECommand.h  GETCommand.cpp  GETCommand.h  ICommand.h  PATCHCommand.cpp  PATCHCommand.h  POSTCommand.cpp  POSTCommand.h  helpCommand.cpp  helpCommand.h
src/recServer/tests/: testsMovies.cpp
src/recServer/threadpool/: ThreadPool.cpp  ThreadPool.h
